Fixed full-view-height not stretching on horizontal devices

--- a/src/assets/scss/shared/theme.scss
+++ b/src/assets/scss/shared/theme.scss
@@ -665,7 +665,7 @@ div.textarea {
 }
 
 .full-view-height { // Stretches a container to the full view height of the device.
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .full-width { // Stretches a container to the full width of its parent.
